# gnome-shell-extensions

./: .gitignore  meson.build  meson_options.txt
.pc/: applied-patches
.pc/chore-Basic-GUI-options-for-notification-center.patch/extensions/notification-center/: extension.js  meson.build  stylesheet.css
.pc/chore-Basic-GUI-options-for-notification-center.patch/extensions/notification-center/schemas/: meson.build
.pc/chore-dash-to-panel-install-override-file.patch/extensions/dash-to-panel/schemas/: meson.build
.pc/chore-osk-hangul-add-stylesheet.css-to-.gitignore.patch/: .gitignore
.pc/chore-tos-hotkey-modify-build-configuration-file.patch/extensions/tos-hotkey/schemas/: meson.build
.pc/feat-Arc-Menu-Change-to-use-arc-applications.menu.patch/extensions/arc-menu/: baseMenuLayout.js  meson.build
.pc/feat-Calibrator-Add-calibrator-extension.patch/: meson.build
.pc/feat-Gooroom-security-add-gooroom-security-extensions.patch/: meson.build
.pc/feat-Greeter-Add-greeter-extension.patch/: meson.build
.pc/feat-Greeter-Customize-lock-screen-authprompt.patch/extensions/greeter/: extension.js  meson.build
.pc/feat-Logging-Install-Logging-Module-for-each-Extensions.patch/: meson.build
.pc/feat-Screenshot-Add-screenshot-extension.patch/: meson.build
.pc/feat-alternate-tab-add-extension.patch/: meson.build
.pc/feat-appindcator-merge-topicons-logic-with-appindicator-e.patch/: meson.build
.pc/feat-appindicator-add-appindicator.patch/: meson.build
.pc/feat-arc-menu-add-arc-menu-extension.patch/: meson.build
.pc/feat-common-Add-TOS-Extension.patch/: meson.build
.pc/feat-dash-to-panel-add-dash-to-panel.patch/: meson.build
.pc/feat-monitor-settings-saver-added.patch/: meson.build
.pc/feat-osk-hangul-change-osk-keyboard-to-support-hangul-inp.patch/: meson.build
.pc/feat-osk-hangul-compile-scss-file-when-building-the-proje.patch/extensions/osk-hangul/: meson.build  stylesheet.css
.pc/feat-search-add-search-extension.patch/: meson.build
.pc/feat-top-icons-add-top-icons-extension.patch/: meson.build
.pc/feat-tos-hotkey-new-extension-to-support-tos-hotkey-speci.patch/: meson.build
.pc/feat-tos-hotkey-refactor-altF4-widget.patch/extensions/tos-hotkey/: extension.js  meson.build  stylesheet.css
.pc/refactor-Search-Modify-open-folder-location-action.patch/extensions/search/: menuButton.js  menuWidgets.js  meson.build
.pc/refactor-notice-applet-convert-c-code-to-js.patch/extensions/notification-center/: extension.js  meson.build
data/: gnome-classic.desktop.in
debian/: changelog  control  control.in  copyright  gbp.conf  install  rules
debian/patches/: bugfix-AlternateTab-Fix-SwitcherPopup-Width-logic.patch  bugfix-AlternateTab-Fix-SwitcherPopup-width-Logic.patch  bugfix-AlternateTab-Fix-allocation-function-of-SwitcherLi.patch  bugfix-AlternateTab-Rearrange-SwitcherList-allocation-fun.patch  bugfix-AlternateTab-prevent-broken-Preview-thumbnail.patch  bugfix-Arc-Menu-Fix-error-thar-pinned-app-title-is-not-ap.patch  bugfix-Arc-Menu-Search-correct-uuid-of-dashToPanel.patch  bugfix-Arc-Menu-Solve-issues-that-do-not-appear-on-applis.patch  bugfix-Arcmenu-Fix-FavoritesApp-callback-via-touchscreen.patch  bugfix-Arcmenu-actionsbox-layout-fix.patch  bugfix-Changed-arcmenu-translation.patch  bugfix-DashToPanel-Fix-warning-message-st_widget_get_them.patch  bugfix-Display-popup-dialog-authentication-and-ap-passwor.patch  bugfix-Fix-notification-icon-not-displaying.patch  bugfix-Greeter-Delete-the-customized-screen-shield.patch  bugfix-Greeter-Disable-esc-key-on-the-login-screen.patch  bugfix-Greeter-Enable-keyboard-input-on-the-xserver-based.patch  (+368 more)
debian/source/: include-binaries
extensions/: meson.build
extensions/alternate-tab/: extension.js  meson.build  stylesheet.css  switcher.js
extensions/appindicator/: dbusMenu.js  indicatorStatusIcon.js  meson.build  metadata.json.in  topicons.js
extensions/appindicator/interfaces-xml/: meson.build
extensions/arc-menu/: arc-applications.menu  baseMenuLayout.js  constants.js  controller.js  convenience.js  extension.js  helper.js  menuButton.js  menuLayout.js  menuWidgets.js  meson.build  metadata.json.in  placeDisplay.js  stylesheet.css  utils.js
extensions/arc-menu/po/: POTFILES.in  ar.po  ko_KR.po  meson.build  szl.po  zh_TW.po
extensions/arc-menu/schemas/: 10_arcmenu.gschema.override  gschemas.compiled  meson.build  org.gnome.shell.extensions.arcmenu.gschema.xml
extensions/dash-to-panel/: Settings.ui  appIcons.js  convenience.js  extension.js  intellihide.js  meson.build  metadata.json.in  overview.js  panel.js  panelManager.js  panelPositions.js  panelStyle.js  prefs.js  progress.js  proximity.js  stylesheet.css  taskbar.js  transparency.js  tray.js  update.js  utils.js  windowPreview.js
extensions/dash-to-panel/po/: LINGUAS  POTFILES.in  ko.po  meson.build
extensions/dash-to-panel/schemas/: 10_dash-to-panel.gschema.override  meson.build  org.gnome.shell.extensions.dash-to-panel.gschema.xml
extensions/desktop-icons-ng/: README.md  constants.js  dbusUtils.js  desktopGrid.js  desktopIconsUtil.js  desktopManager.js  ding.js  enums.js  extension.js  fileItem.js  meson.build  metadata.json.in  preferences.js  renameView.js  selectionCalculator.js  sortUtil.js  stylesheet.css
extensions/desktop-icons-ng/po/: POTFILES.in  ko.po  meson.build
extensions/desktop-icons-ng/schemas/: 10_desktop-icons-ng.gschema.override  meson.build  org.gnome.shell.extensions.ding.gschema.xml
extensions/gooroom-security/: extension.js  meson.build  metadata.json.in  notify.gjs  securityUtils.js
extensions/gooroom-security/schemas/: meson.build  org.gnome.shell.extensions.gooroom-security.gschema.xml
extensions/notification-center/schemas/: 10_notification-center.gschema.override  meson.build  org.gnome.shell.extensions.notification-center.gschema.xml
extensions/osk-hangul/: README.MD  _stylesheet.scss  adapter.js  extension.js  keyButton.js  keyboardWrapper.js  meson.build  metadata.json.in  qwertyMap.js  utils.js
hooks/: commit-msg  pre-commit  prepare-commit-msg
logging/: README.md  logging.js  meson.build
(+689 files in other folders)
